crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_contextual_keyword_adjacency_as_ordinary_tokens.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class varfilename {
}

class ContextualKeywordAdjacency {
  void method(int non, int sealedclass) {
    varfilename value = null;
    int difference = non - sealedclass;
  }
}

diagnostics:
(none)
