crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_contextual_keyword_and_type_expression_ambiguities.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
record Box<T>(T value) {
}

class Ambiguities<T extends java.util.Map<String, java.util.List<Integer>>> {
  Object field;

  void method(Object value) {
    var local = (String) value;
    java.util.function.Function<String, String> lambda = (String s) -> s;
    this.yield();
    Object access = this.field;
    java.util.Map<String, java.util.List<Integer>> nested = null;
    nested.get("key");
  }

  void yield() {
  }
}

diagnostics:
(none)
