crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_contextual_keywords_as_identifiers_outside_keyword_contexts.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class ContextualKeywordIdentifiers {
  int module;
  int open;
  int opens;
  int requires;
  int transitive;
  int exports;
  int to;
  int uses;
  int provides;
  int with;
  int when;
  int permits;
  int sealed;
  int record;
  int var;

  void when() {
  }

  void requires() {
  }

  void method() {
    int when = this.when;
    record = "name";
    this.requires();
  }
}

diagnostics:
(none)
