crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_contextual_yield_as_method_invocation.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class ContextualYield {
  void method() {
    this.yield();
  }

  void yield() {
  }
}

diagnostics:
(none)
