crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_dangling_else_with_nearest_if_binding.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class DanglingElse {
  void method(boolean first, boolean second) {
    if (first) {
      if (second) {
        winner();
      } else {
        loser();
      }
    }
  }

  void winner() {
  }

  void loser() {
  }
}

diagnostics:
(none)
