crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_deeply_nested_generic_type_arguments_closed_by_shift_tokens.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class DeepNestedGenericClose {
  java.util.Map<String, java.util.Map<Integer, java.util.List<Long>>> triple;
  java.util.Map<
    String,
    java.util.Map<Integer, java.util.Map<Long, java.util.List<Double>>>
  > quadruple;
}

diagnostics:
(none)
