crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_diamond_class_instance_creation.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class DiamondCreation {
  void method() {
    Object list = new java.util.ArrayList<>();
  }
}

diagnostics:
(none)
