crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_empty_declaration_alternatives.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class EmptyDeclarations {
}

interface EmptyInterface {
}

@interface EmptyAnnotation {
}

diagnostics:
(none)
