crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_enum_constant_arguments_as_structured_argument_lists.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
enum StructuredEnumArguments {
  VALUE(1 + helper("x"), new Box()),
}

diagnostics:
(none)
