crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_enum_constant_arguments_before_class_body_as_structured_argument_lists.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
enum StructuredEnumClassBodyArguments {
  SPECIAL(helper(1)) {
    void run() {
    }
  },
}

diagnostics:
(none)
