crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_enum_declaration_constants_and_body_declarations.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
enum Planet {
  MERCURY(1),
  VENUS(2) {
    void override() {
    }
  };

  final int order;

  Planet(int order) {
    this.order = order;
  }

  void override() {
  }
}

diagnostics:
(none)
